# Swarm_Copters_inParis

./: CMakeLists.txt  Dockerfile.ai  Dockerfile.ros2  EVIDENCE_AI_DRIVEN_SIMULATION.md  PROJECT_CONTEXT_2025-08-01_03-42.md  README.md  ai_decision_service.py  docker-compose.override.yml  docker-compose.visual.yml  docker-compose.working.yml  docker-compose.yml  package.xml  requirements.txt
ai_controllers/: __init__.py  flight_controller.py  swarm_coordinator.py
config/: amd64.env  apple_silicon.env  headless.env
control_panel/: __init__.py  mission_control.py
control_panel/launch/: mission_control.launch
docs/: ARCHITECTURE.md  GAZEBO_DEPLOYMENT_GUIDE.md
paris_environment/: __init__.py  paris_world.py
paris_environment/worlds/: paris_visual_world.world
quadcopter_models/: __init__.py  quadcopter_urdf.py
scripts/: __init__.py  communication_logger.py  comprehensive_simulation_test.py  configure_docker_resources.py  deploy_gazebo.py  enable_visual_simulation.py  macos_visual_launch.py  quick_start.py  quick_visual_launch.py  real_ai_simulation.py  run_full_simulation.py  safe_simulation_runner.py  show_communications.py  simple_gazebo_deploy.py  simple_simulation_runner.py  simple_visual_launch.py  simulation_status_report.py  test_smollm_after_config.py  working_gazebo_deploy.py
simulation/: __init__.py  paris_swarm_simulation.launch
swarm_agents/: __init__.py
swarm_agents/swarm_agents/: perception_bridge.py
visualization/: camera_proof_visualization.html  paris_swarm_3d.html  real_ai_visualization.html  working_ai_visualization.html
